--- a/src/Pages/Login/Login.css
+++ b/src/Pages/Login/Login.css
@@ -35,19 +35,39 @@ select {
 }
 
 .login-wrapper {
-  margin-top: 250px;
-  box-shadow: 0px 0px 12px var(--border);
-  width: 45%;
-  margin-left: 250px;
-  padding-left: 50px;
+  /* box-shadow: 0px 0px 12px var(--border); */
+  /* width: 45%;
+  height: 450px; */
+  /* margin-top: 250px; */
+  /* margin-left: 250px; */
+  /* padding-left: 50px;
   padding-top: 30px;
-  padding-bottom: 100px;
-  height: 450px;
+  padding-bottom: 100px; */
+
+  /* My stuff */
+  width: 100%;
+  height: 100vh;
+  margin: 0;
+  padding-top: 250px;
+  padding-left: 550px;
+  /* end of my stuff */
+
   border-radius: 3px;
   position: relative;
   background-color: var(--background);
   color: var(--text-primary);
   transition: all 0.5s;
+}
+
+.conny {
+  box-shadow: 0px 0px 12px var(--border);
+  border-radius: 3px;
+  position: relative;
+  background-color: var(--background);
+  color: var(--text-primary);
+  transition: all 0.5s;
+  width: 900px;
+  padding: 30px;
 }
 
 /* Light dark mode */
@@ -61,7 +81,7 @@ select {
   position: absolute;
   top: 0;
   right: 0;
-  width: 120px;
+  width: 180px;
 }
 
 .forgot-password {
@@ -105,8 +125,13 @@ input:focus {
 }
 
 .login-text-box {
-  width: 600px;
-  height: 50px;
+  width: 650px;
+  height: 55px;
+}
+
+.login-wrapper label {
+  margin: 0;
+  padding: 0;
 }
 
 .submit-button {
